docs: commit agent-modified Diataxis docs for DTR 2.6.0
Partial agent output — updated files across tutorials, how-to, explanation,
contributing, and root index sections:
- docs/index.md: root landing page updated to v2.6.0
- docs/tutorials/: your-first-doctest, REST API, records-sealed updated
- docs/how-to/: index, 80-20-essentials, add-to-maven updated
- docs/explanation/architecture.md: updated for v2.6.0 structure
- docs/contributing/: index and setup updated for Java 25 + Maven 4

https://claude.ai/code/session_01Y8LUibcaDGLj74zvcefk1A