@@ -1,34 +1,37 @@
 # Tutorials
 
-Tutorials are **learning-oriented**. They take you through a series of steps to complete a project. When you finish, you'll have a working DTR setup and a clear mental model of how it works.
+Tutorials are **learning-oriented**. They take you through a series of steps to complete a project. When you finish, you will have a working DTR setup and a clear mental model of how it works.
+
+**DTR version:** 2.6.0 | **Java:** 25+ with `--enable-preview`
 
 ## Available Tutorials
 
-### Java 25 Fundamentals
+### Getting Started
 
 | Tutorial | What you'll learn |
 |---|---|
-| [Virtual Threads for Lightweight Concurrency](virtual-threads-lightweight-concurrency.md) | How to spawn thousands of concurrent tasks using Java 25 virtual threads |
-| [Records and Sealed Classes](records-sealed-classes.md) | How to eliminate boilerplate with records and enforce type safety with sealed classes |
+| [Your First DocTest](your-first-doctest.md) | Set up DTR 2.6.0, write a test, read the generated Markdown output |
 
-### Real-Time Protocols
+### Java 25 Fundamentals with DTR
 
 | Tutorial | What you'll learn |
 |---|---|
-| [WebSockets for Real-Time Communication](websockets-realtime.md) | Bidirectional persistent connections for chat and collaboration |
-| [gRPC Streaming](grpc-streaming.md) | Efficient RPC with unary, streaming, and bidirectional patterns |
-| [Server-Sent Events](server-sent-events.md) | One-way HTTP-based push notifications and live updates |
+| [Records and Sealed Classes](records-sealed-classes.md) | Model type-safe data with records, document schemas with `sayRecordComponents` and `sayCodeModel` |
+| [Benchmarking with Virtual Threads](virtual-threads-lightweight-concurrency.md) | Measure performance with `sayBenchmark`, run warmup with virtual threads, compare platform vs virtual thread executors |
 
-### API Testing with DTR
+### API Documentation
 
 | Tutorial | What you'll build |
 |---|---|
-| [Your First DocTest](your-first-doctest.md) | A complete, runnable DocTest for a public API |
-| [Your First DTR Test: From Test to Living Docs](01-basic-test-documentation.md) | A simple test that generates HTML documentation automatically |
-| [Testing REST APIs and Generating API Documentation](02-http-api-testing.md) | A complete REST API test suite with multi-endpoint documentation |
-| [Generating OpenAPI 3.0 Specs from Tests](03-openapi-generation.md) | Machine-readable API specs generated directly from tests |
-| [Advanced: Multiple Formats, LaTeX, and PDF](04-advanced-rendering.md) | Generate HTML, LaTeX, PDF, Markdown, and JSON from a single test |
-| [Testing a REST API](testing-a-rest-api.md) | A full CRUD API documented end-to-end |
+| [Testing a REST API](testing-a-rest-api.md) | A full CRUD API documented end-to-end using `java.net.http.HttpClient` and DTR `say*` methods |
+
+### Visualizing Code with DTR
+
+| Tutorial | What you'll learn |
+|---|---|
+| [Diagrams and Mermaid with sayMermaid](websockets-realtime.md) | Render architecture diagrams, flowcharts, and class diagrams directly in documentation |
+| [Contract Verification with sayContractVerification](server-sent-events.md) | Prove interface implementations are complete and document coverage matrices |
+| [Code Evolution with sayEvolutionTimeline and sayClassDiagram](grpc-streaming.md) | Visualize git history and auto-generate class diagrams from reflection |
 
 ---
 
@@ -38,6 +41,8 @@ Tutorials are **learning-oriented**. They take you through a series of steps to 
 
 - Java 25 installed (`java -version` shows `openjdk 25.x.x`)
 - Maven 4 or Maven Daemon available (`mvnd --version`)
-- A Maven project with JUnit 4
+- A Maven project with DTR 2.6.0 on the test classpath
 
-If you're starting from scratch, the [Your First DocTest](your-first-doctest.md) tutorial walks you through project setup too.
+If you are starting from scratch, the [Your First DocTest](your-first-doctest.md) tutorial walks you through project setup too.
+
+**Important:** DTR 2.6.0 removed the built-in HTTP client (`sayAndMakeRequest`, `Request`, `Response`, etc.). Use `java.net.http.HttpClient` from the JDK directly. See [Testing a REST API](testing-a-rest-api.md) for a complete example.
